--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/static/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="/static/dist/css/AdminLTE.css">
+    <link rel="stylesheet" href="/static/dist/css/bzs.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
               folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="/static/dist/css/skins/skin-blue.min.css">
@@ -48,6 +49,7 @@
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
+            <span class="show-on-tablets" style="color: rgb(255, 255, 255); float: left; padding: 10px 10px; font-size: 20px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;"><i>bz</i><strong>Share</strong></span>
             <!-- Navbar Right Menu -->
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
