Added colour / style changing in templated modals.

--- a/static/index.html
+++ b/static/index.html
@@ -290,7 +290,7 @@
 </div></div></div>
 
 <!-- Null dialog, content to be filled by $.load(). -->
-<div class="modal fade" id="dialog-template-container" tabindex="-1"><div class="modal-dialog modal-lg"><div class="modal-content" id='dialog-template-container-content'>
+<div class="modal fade" id="dialog-template-container" tabindex="-1"><div class="modal-dialog modal-lg" id="dialog-template-container-wrapper"><div class="modal-content" id='dialog-template-container-content'>
 </div></div></div>
 <!-- end of Null dialog -->
 
