--- a/static/usergroups_remove_group_confirm.html
+++ b/static/usergroups_remove_group_confirm.html
@@ -52,5 +52,6 @@ var bzsDropGroupFunc = function() {
             bzsReloadMainIndex();
             return ;
         }
-    })
+    });
+    return ;
 }
