Rewritten permission system that can at least work.

--- a/static/files.html
+++ b/static/files.html
@@ -147,7 +147,7 @@
                                 % endif
                             </td>
                             <td class="hide-on-tablets">
-                                ${attrib['owners']}
+                                ${attrib['owner']}
                             </td>
                             <td class="hide-on-phones" data-order="${attrib['date-uploaded']}">
                                 ${attrib['date-uploaded-str']}
