--- a/static/profile.html
+++ b/static/profile.html
@@ -17,16 +17,20 @@
             <div class="box box-primary">
                 <div class="box-body box-profile">
                     <img class="profile-user-img img-responsive img-circle" src="../../dist/img/user4-128x128.jpg" alt="User profile picture">
-
                     <h3 class="profile-username text-center">${this_user.usr_name}</h3>
-
                     <p class="text-muted text-center"><b>bzShare</b> User</p>
-
                     <ul class="list-group list-group-unbordered">
                         <li class="list-group-item">
                             <b>Groups</b> <a class="pull-right">${len(this_user.usergroups)}</a>
                         </li>
                     </ul>
+                    % if this_user.handle not in {'kernel', 'guest'}:
+                    <div class="row"><div align="center">
+                        <button class="btn btn-danger" onclick="javascript:bzsDialogTemplateLoad('/settings/profile_edit/dropuser-prompt+${this_user.handle}', 'modal-warning')" ${'' if current_user.handle == 'kernel' or current_user.handle == this_user.handle else 'disabled="disabled"'}>
+                            Delete Account
+                        </button>
+                    </div></div>
+                    % endif
                 </div>
                 <!-- /.box-body -->
             </div>
