--- a/static/usergroups.html
+++ b/static/usergroups.html
@@ -135,7 +135,7 @@
                             <tr>
                                 <td>
                                     <span class="pull-left">
-                                        <img src="/user_avatar/${itert_user.handle}" class="user-image img-circle" style="height: 47px; width: 47px;">
+                                        <img src="/user_avatar/${itert_user.handle}" class="user-image img-circle" style="height: 47px; width: 47px; border: 2px solid #b2b6be;">
                                     </span>
                                     <strong style="padding-left: 10px;">${itert_user.usr_name}</strong><br>
                                     <a href="#" data-href="/settings/profile/${itert_user.handle}"><i style="color: #aaaaaa; font-size: 14px; padding-left: 10px">${itert_user.handle}</i></a>
@@ -153,7 +153,7 @@
                             <tr>
                                 <td>
                                     <span class="pull-left">
-                                        <img src="/user_avatar/${itert_user.handle}" class="user-image img-circle" style="height: 47px; width: 47px;">
+                                        <img src="/user_avatar/${itert_user.handle}" class="user-image img-circle" style="height: 47px; width: 47px; border: 2px solid #b2b6be;">
                                     </span>
                                     <strong style="padding-left: 10px;">${itert_user.usr_name}</strong>
                                     <span style="color: #1164df;">Would like to join this group.</span><br>
