Enabled manually resetting dynamic interfaces.

--- a/static/dynamic_interface.html
+++ b/static/dynamic_interface.html
@@ -23,6 +23,7 @@
                     </h4>
                 </div>
                 <div class="box-body">
+                    <p>Use <b><i>&lt;!-- RESET --&gt;</i></b> to reset data.</p>
                     <textarea class="form-control" id="inputHomeData" name="HomeData" style="font-family: Consolas; height: 600px; resize: none;" placeholder="HTML content for /home/">${home_data}</textarea>
                 </div>
                 <div class="box-footer">
